tests/named_args_missing_name_bad.stderr
tests/named_args_missing_name_bad.hop:7:19: error: HOP2056: call argument must be named (or be an identifier) after the first argument
